--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ footer {
         <!-- YouTube Video -->
         <div class="section-title">สื่อวีดิทัศน์</div>
         <div class="video-container">
-          <iframe src="https://youtu.be/1zfnwjcOi04" 
+          <iframe src="https://www.youtube.com/watch?v=1zfnwjcOi04" 
               title="YouTube video player" frameborder="0" 
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
               allowfullscreen>
@@ -488,3 +488,4 @@ closeBtn.onclick = () => { modal.style.display = "none"; };
 
 </body>
 </html>
+
