--- a/index.html
+++ b/index.html
@@ -359,11 +359,11 @@ footer {
         <!-- YouTube Video -->
         <div class="section-title">สื่อวีดิทัศน์</div>
         <div class="video-container">
-          <iframe src="https://www.youtube.com/watch?v=1zfnwjcOi04" 
-              title="YouTube video player" frameborder="0" 
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-              allowfullscreen>
-          </iframe>
+         <iframe src="https://www.youtube.com/embed/1zfnwjcOi04" 
+    title="YouTube video player" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    allowfullscreen>
+</iframe>
         </div>
 
         <div class="menu-icons">
@@ -488,4 +488,5 @@ closeBtn.onclick = () => { modal.style.display = "none"; };
 
 </body>
 </html>
+
 
