--- a/index.html
+++ b/index.html
@@ -392,20 +392,20 @@ footer {
 
         <!-- Menu Icons as Full Images -->
         <div class="menu-icons">
-            <a href="https://edoc.forest.go.th/SARABAN/login.html" target="_blank" class="menu-item">
+            <a href="https://itservice.forest.go.th/meeting/pages/?menu=home" target="_blank" class="menu-item">
                 <img src="images/menu1.png" alt="ระบบจองห้องประชุม">
             </a>
-            <a href="https://itservice.forest.go.th/meeting/pages/?menu=home" target="_blank" class="menu-item">
-                <img src="images/menu2.png" alt="ระบบจองห้องประชุมออนไลน์">
-            </a>
             <a href="https://www.forest.go.th/product/th/zoom/" target="_blank" class="menu-item">
-                <img src="images/menu3.png" alt="บริการสำหรับเจ้าหน้าที่">
+                <img src="images/menu5.png" alt="ระบบจองห้องประชุมออนไลน์">
+            </a>
+            <a href="https://www.forest.go.th/services/personnel/" target="_blank" class="menu-item">
+                <img src="images/menu2.png" alt="บริการสำหรับเจ้าหน้าที่">
             </a>
             <a href="https://edoc.forest.go.th/SARABAN/login.html" target="_blank" class="menu-item">
-                <img src="images/menu4.png" alt="ระบบสารบรรณอิเล็กทรอนิกส์">
+                <img src="images/menu3.png" alt="ระบบสารบรรณอิเล็กทรอนิกส์">
             </a>
             <a href="#" target="_blank" class="menu-item">
-                <img src="images/menu5.png" alt="ระบบหนังสือเวียนอิเล็กทรอนิกส์">
+                <img src="images/menu4.png" alt="ระบบหนังสือเวียนอิเล็กทรอนิกส์">
             </a>
         </div>
     </div>
