--- a/index.html
+++ b/index.html
@@ -353,7 +353,9 @@ footer {
     <li><a href="#">ระบบหนังสือเวียนกรมป่าไม้</a></li>
     <li><a href="https://www.forest.go.th/research/" target="_blank">สำนักวิจัยและพัฒนาการป่าไม้</a></li>
     <li><a href="https://www.forest.go.th/home/" target="_blank">กรมป่าไม้</a></li>
-    <li><a href="#">ติดต่อ</a></li>
+    <li><a href="#">ติดต่อ</a></li>    
+    <li><a href="edocs.html">E-Docs</a></li>
+    <li><a href="admin.html">Admin</a></li>
 </ul>
 </nav>
 
@@ -523,3 +525,4 @@ closeBtn.onclick = () => { modal.style.display = "none"; };
 
 </body>
 </html>
+
