--- a/index.html
+++ b/index.html
@@ -350,11 +350,10 @@ footer {
             <li><a href="https://www.forest.go.th/product/th/zoom/" target="_blank">ระบบจองห้องประชุมออนไลน์</a></li>
         </ul>
     </li>
-    <li><a href="#">ระบบหนังสือเวียนกรมป่าไม้</a></li>
+    <li><a href="edocs.html">ระบบหนังสือเวียนกรมป่าไม้</a></li>
     <li><a href="https://www.forest.go.th/research/" target="_blank">สำนักวิจัยและพัฒนาการป่าไม้</a></li>
     <li><a href="https://www.forest.go.th/home/" target="_blank">กรมป่าไม้</a></li>
     <li><a href="#">ติดต่อ</a></li>    
-    <li><a href="edocs.html">E-Docs</a></li>
     <li><a href="admin.html">Admin</a></li>
 </ul>
 </nav>
@@ -525,4 +524,5 @@ closeBtn.onclick = () => { modal.style.display = "none"; };
 
 </body>
 </html>
+
 
