--- a/edocs.html
+++ b/edocs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RFDO e-Docs ระบบหนังสือเวียนกรมป่าไม้อิเล็กทรอนิกส์ ของสำนักวิจัยและพัฒนาการป่าไม้</title>
+    <title>RFDO e-Doc - เอกสารดาวน์โหลด</title>
     <script src="js/supabase.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="images/logorfdo.png">
@@ -100,12 +100,13 @@
 
     <script>
         // *** ข้อมูล Supabase ที่ถูกต้อง ***
+        import { createClient } from '@supabase/supabase-js'
+
+        const supabaseUrl = 'https://rxqfmhrxoepjdsmmnqhk.supabase.co'
+        const supabaseKey = process.env.SUPABASE_KEY
+        const supabase = createClient(supabaseUrl, supabaseKey) 
         const SUPABASE_URL = "https://rxfqfmhrxoejpdsmnqhk.supabase.co"; 
         const SUPABASE_KEY = "sb_publishable_1MMLp3mTRrIi5m1Om-HdQVW_0DrHub8g"; 
-        
-        // 🚨 แก้ไข: ใช้ window.supabase.createClient เพื่อหลีกเลี่ยง ReferenceError
-        const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-
         const documentList = document.getElementById('documentList');
 
         async function loadDocuments() {
@@ -158,7 +159,4 @@
     </script>
 
 </body>
-
 </html>
-
-
