--- a/edocs.html
+++ b/edocs.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RFDO e-Doc - เอกสารดาวน์โหลด</title>
-    <script src="js/supabase.min.js" type="module"></script>
+    <script src="js/supabase.min.js"></script> 
+    <script src="js/main.js" type="module"></script>
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="images/logorfdo.png">
 
@@ -160,3 +161,4 @@
 
 </body>
 </html>
+
