--- a/edocs.html
+++ b/edocs.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="images/logorfdo.png">
 
     <style>
-        /* สไตล์หลัก (คัดลอกมาจาก index.html) */
+        /* สไตล์หลัก */
         body { margin: 0; background: #f3f8f8; font-family: "Prompt", sans-serif; }
         .head-section { position: relative; background: url('images/head.jpg') no-repeat center center; background-size: cover; display: flex; flex-direction: column; align-items: flex-start; justify-content: center; padding: 15px 25px; height: auto; min-height: 300px; gap: 8px; }
         .head-section img#logo { width: 120px; height: auto; }
@@ -96,6 +96,6 @@
     </main>
 
     <footer>© 2025 ส่วนอำนวยการ สำนักวิจัยและพัฒนาการป่าไม้</footer>
-
-</body>
+    
+    </body>
 </html>
