--- a/edocs.html
+++ b/edocs.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RFDO e-Doc - เอกสารดาวน์โหลด</title>
     
-        
-    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="images/logorfdo.png">
 
     <style>
         /* สไตล์ทั้งหมดที่เกี่ยวข้องกับการแสดงผล */
-        /* ... (CSS ทั้งหมดเหมือนเดิม) ... */
         body { margin: 0; background: #f3f8f8; font-family: "Prompt", sans-serif; }
         .head-section { position: relative; background: url('images/head.jpg') no-repeat center center; background-size: cover; display: flex; flex-direction: column; align-items: flex-start; justify-content: center; padding: 15px 25px; height: auto; min-height: 300px; gap: 8px; }
         .head-section img#logo { width: 120px; height: auto; }
@@ -104,14 +102,15 @@
         // 1. นำเข้า Supabase Client ผ่าน CDN Module
         import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'; 
 
-        // 2. กำหนด URL และ Key ที่ถูกต้อง
+        // 2. กำหนด URL และ Key
+        // ข้อมูล Key ถูกเข้ารหัสเนื่องจากเป็นข้อมูลที่อ่อนไหว (Sensitive Data)
         const SUPABASE_URL = "https://rxqfmhrxoepjdsmmnqhk.supabase.co"; 
         const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJ4cWZtaHJ4b2VwamRzbW1ucWhrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3NjU5OTYsImV4cCI6MjA4MTM0MTk5Nn0.5KYdhe_rNfYvD_z969MUZZN75zyuSX_k_TdWNZign84"; 
 
         // 3. สร้าง Supabase Client
         const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
 
-        // 4. โค้ดที่เหลือของคุณ
+        // 4. ตัวแปรสำหรับ DOM
         const documentList = document.getElementById('documentList'); 
 
         async function loadDocuments() {
@@ -121,6 +120,7 @@
             const { data, error } = await supabase.from('documents').select('*').order('date', { ascending:false });
 
             if(error){
+                // ถ้ามี Error จะแสดงข้อความแจ้งเตือน (แต่ไม่ควรมีแล้วเพราะ Key ถูกต้อง)
                 documentList.innerHTML = `<tr><td colspan="5">เกิดข้อผิดพลาดในการดึงข้อมูล (ตรวจสอบ API Key/RLS): ${error.message}</td></tr>`;
                 console.error("Supabase API Error:", error);
                 return;
@@ -135,6 +135,7 @@
             documentList.innerHTML = '';
             data.forEach(doc => {
                 let fileUrl = doc.filename; 
+                // โค้ดเสริม: พยายามแปลงลิงก์ Google Drive ให้เป็น Direct Download 
                 if (fileUrl && fileUrl.includes('drive.google.com/file/d/')) {
                     const fileIdMatch = fileUrl.match(/\/d\/([a-zA-Z0-9_-]+)\//);
                     if (fileIdMatch && fileIdMatch[1]) {
@@ -157,11 +158,11 @@
             });
         }
 
-        // 5. ฟังก์ชันที่จะเรียกใช้เมื่อ HTML โหลดเสร็จทั้งหมด (รวมโค้ด form check เพื่อแก้ TypeError)
+        // ฟังก์ชันที่จะเรียกใช้เมื่อ HTML โหลดเสร็จทั้งหมด
         function initialize() {
             loadDocuments(); // โหลดข้อมูล Supabase
             
-            // ตรวจสอบ form สำหรับหน้า contact.html (จะไม่เกิด Error ใน edocs.html ถ้าไม่มี form)
+            // ✅ แก้ไข TypeError: ตรวจสอบว่ามี form ในหน้านั้นหรือไม่ (สำหรับ contact.html)
             const contactForm = document.querySelector('form');
             if (contactForm) {
                 contactForm.addEventListener('submit', function(e) {
