--- a/edocs.html
+++ b/edocs.html
@@ -98,7 +98,7 @@
 
     <footer>© 2025 ส่วนอำนวยการ สำนักวิจัยและพัฒนาการป่าไม้</footer>
 
-    <script>
+    <script type="module">
         // *** ข้อมูล Supabase ที่ถูกต้อง ***
         import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'; // ✅ บรรทัดนี้ถูกต้อง
 
@@ -160,3 +160,4 @@
 
 </body>
 </html>
+
