--- a/edocs.html
+++ b/edocs.html
@@ -103,7 +103,7 @@
         import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'; // ✅ บรรทัดนี้ถูกต้อง
 
         const supabaseUrl = 'https://rxqfmhrxoepjdsmmnqhk.supabase.co'
-        const supabaseKey = process.env.SUPABASE_KEY
+        const supabaseKey = "sb_publishable_1MMLp3mTRrIi5m1Om-HdQVW_0DrHub8g"; // ⬅️ ต้องใส่ Key ตัวจริงของคุณ
         const supabase = createClient(supabaseUrl, supabaseKey) 
         const SUPABASE_URL = "https://rxfqfmhrxoejpdsmnqhk.supabase.co"; 
         const SUPABASE_KEY = "sb_publishable_1MMLp3mTRrIi5m1Om-HdQVW_0DrHub8g"; 
@@ -160,4 +160,5 @@
 
 </body>
 </html>
+
 
