--- a/edocs.html
+++ b/edocs.html
@@ -102,6 +102,7 @@
         // *** ข้อมูล Supabase ที่ถูกต้อง ***
         import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'; // ✅ บรรทัดนี้ถูกต้อง
         const supabaseUrl = 'https://rxqfmhrxoepjdsmmnqhk.supabase.co'
+        const supabaseKey = process.SUPABASE_KEY
         const supabase = createClient(supabaseUrl, supabaseKey) 
         const SUPABASE_URL = "https://rxfqfmhrxoejpdsmnqhk.supabase.co"; 
         const SUPABASE_KEY = "sb_publishable_lMMLp3mTrIiSm1Om-HdQxw_oOrHub8g"; 
@@ -158,11 +159,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
