--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ footer {
     <li><a href="edocs.html">ระบบหนังสือเวียนกรมป่าไม้</a></li>
     <li><a href="https://www.forest.go.th/research/" target="_blank">สำนักวิจัยและพัฒนาการป่าไม้</a></li>
     <li><a href="https://www.forest.go.th/home/" target="_blank">กรมป่าไม้</a></li>
-    <li><a href="#">ติดต่อ</a></li>    
+    <li><a href="contact.html">ติดต่อ</a></li>    
 </ul>
 </nav>
 
@@ -523,6 +523,7 @@ closeBtn.onclick = () => { modal.style.display = "none"; };
 
 </body>
 </html>
+
 
 
 
