--- a/contact.html
+++ b/contact.html
@@ -177,12 +177,12 @@
         <li class="dropdown">
             <a href="#">เกี่ยวกับเรา ▾</a>
             <ul class="dropdown-menu">
-                <li><a href="#">ฝ่ายธุรการ</a></li>
-                <li><a href="#">ฝ่ายการเจ้าหน้าที่</a></li>
-                <li><a href="#">ฝ่ายการเงิน และบัญชี</a></li>
-                <li><a href="#">ฝ่ายการพัสดุ</a></li>
-                <li><a href="#">ฝ่ายแผนและติดตามประเมินผล</a></li>
-                <li><a href="#">ฝ่ายพัฒนาและประสานงานวิจัยป่าไม้</a></li>
+                <li><a href="Adminrfdo.html">ฝ่ายธุรการ</a></li>
+                <li><a href="HRrfdo.html">ฝ่ายการเจ้าหน้าที่</a></li>
+                <li><a href="FArfdo.html">ฝ่ายการเงิน และบัญชี</a></li>
+                <li><a href="PDrfdo.html">ฝ่ายการพัสดุ</a></li>
+                <li><a href="Planrfdo.html">ฝ่ายแผนและติดตามประเมินผล</a></li>
+                <li><a href="Researchrfdo.html">ฝ่ายพัฒนาและประสานงานวิจัยป่าไม้</a></li>
             </ul>
         </li>
         <li class="dropdown">
@@ -288,3 +288,4 @@
 </body>
 
 </html>
+
