--- a/edocs.html
+++ b/edocs.html
@@ -109,11 +109,18 @@
     <nav>
         <ul>
             <li><a href="index.html" class="home-icon"><svg width="20" height="20" viewBox="0 0 24 24"><path d="M3 10.5L12 3l9 7.5V21a1 1 0 0 1-1 1h-5v-6h-6v6H4a1 1 0 0 1-1-1V10.5z"/></svg></a></li>
-            <li class="dropdown"><a href="#">เกี่ยวกับเรา ▾</a><ul class="dropdown-menu"><li><a href="#">ฝ่ายธุรการ</a></li><li><a href="#">ฝ่ายการเจ้าหน้าที่</a></li><li><a href="#">ฝ่ายการเงิน และบัญชี</a></li><li><a href="#">ฝ่ายการพัสดุ</a></li><li><a href="#">ฝ่ายแผนและติดตามประเมินผล</a></li><li><a href="#">ฝ่ายพัฒนาและประสานงานวิจัยป่าไม้</a></li></ul></li>
+            <li class="dropdown"><a href="#">เกี่ยวกับเรา ▾</a>
+                <ul class="dropdown-menu">
+                    <li><a href="Adminrfdo.html">ฝ่ายธุรการ</a></li> 
+                     <li><a href="HRrfdo.html">ฝ่ายการเจ้าหน้าที่</a></li>
+                     <li><a href="FArfdo.html">ฝ่ายการเงิน และบัญชี</a></li>
+                      <li><a href="PDrfdo.html">ฝ่ายการพัสดุ</a></li>
+                      <li><a href="Planrfdo.html">ฝ่ายแผนและติดตามประเมินผล</a></li>
+                      <li><a href="Researchrfdo.html">ฝ่ายพัฒนาและประสานงานวิจัยป่าไม้</a></li>
+                </ul></li>
             <li class="dropdown">
                 <a href="#">บริการสำหรับเจ้าหน้าที่ ▾</a>
                 <ul class="dropdown-menu">
-                    <li><a href="uploads.html">อัปโหลดเอกสาร (uploads)</a></li>
                     <li><a href="https://edoc.forest.go.th/SARABAN/login.html" target="_blank">ระบบสารบัญอิเล็กทรอนิกส์</a></li>
                     <li><a href="https://itservice.forest.go.th/meeting/pages/?menu=home" target="_blank">ระบบจองห้องประชุม</a></li>
                     <li><a href="https://www.forest.go.th/product/th/zoom/" target="_blank">ระบบจองห้องประชุมออนไลน์</a></li>
@@ -218,5 +225,4 @@
 
 </body>
 </html>
-
 
