--- a/contact.html
+++ b/contact.html
@@ -177,7 +177,7 @@
         <li class="dropdown">
             <a href="#">เกี่ยวกับเรา ▾</a>
             <ul class="dropdown-menu">
-                <li><a href="Adminrfdo.html">ฝ่ายธุรการ</a></li>
+                <li><a href="Adminrfdo.html">ฝ่ายธุรการ</a></li> 
                 <li><a href="HRrfdo.html">ฝ่ายการเจ้าหน้าที่</a></li>
                 <li><a href="FArfdo.html">ฝ่ายการเงิน และบัญชี</a></li>
                 <li><a href="PDrfdo.html">ฝ่ายการพัสดุ</a></li>
@@ -208,7 +208,7 @@
             <i class="fas fa-building"></i>
             <div class="contact-text">
                 <span class="contact-label">หน่วยงาน:</span> 
-                สวนอำนวยการ สำนักวิจัยและพัฒนาการป่าไม้
+                ส่วนอำนวยการ สำนักวิจัยและพัฒนาการป่าไม้
             </div>
         </div>
         
@@ -216,7 +216,7 @@
             <i class="fas fa-map-marker-alt"></i>
             <div class="contact-text">
                 <span class="contact-label">ที่อยู่:</span> 
-                61 ถนนพหลโยธิน แขวงลาดยาว เขตจตุจักร กรุงเทพมหานคร 10900 <br>อาคารสุรัสวดี
+                61 ถนนพหลโยธิน แขวงลาดยาว เขตจตุจักร กรุงเทพมหานคร 10900 <br>สำนักวิจัยและพัฒนาการป่าไม้ อาคารสุรัสวดี
             </div>
         </div>
 
@@ -286,6 +286,4 @@
 <footer>© 2025 ส่วนอำนวยการ สำนักวิจัยและพัฒนาการป่าไม้</footer>
 
 </body>
-
 </html>
-
