--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
 <body>
 
 <div class="head-section">
-    <img id="logo" src="images/logorfdo.png" alt="logo" /> 
+    <img id="logo" src="images/logo.png" alt="logo" /> 
     <div class="head-text-container">
         <div class="head-text">ส่วนอำนวยการ</div>
         <div class="sub-text">สำนักวิจัยและพัฒนาการป่าไม้</div>
@@ -287,3 +287,4 @@
 
 </body>
 </html>
+
