--- a/Researchrfdo.html
+++ b/Researchrfdo.html
@@ -181,7 +181,7 @@
                     <img src="images/usarath.png" alt="รูปนางสาวอุษารัตน์" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="person-name">นางสาวอุษารัตน์ เทียนไชย</div>
-                <div class="person-position">นักวิชาการป่าไม้ชำนาญการ <br> (ประจำฝ่ายฯ อีกหน้าที่หนึ่ง)</div>
+                <div class="person-position">นักวิชาการป่าไม้ชำนาญการพิเศษ <br> (ประจำฝ่ายฯ อีกหน้าที่หนึ่ง)</div>
             </div>
         </div>
         
@@ -244,12 +244,9 @@
         <h3 class="section-header" style="margin-top: 0;"><i class="fas fa-envelope-open-text"></i> ติดต่อฝ่ายพัฒนาและประสานงานวิจัยป่าไม้</h3>
         <p>
             <i class="fas fa-phone-alt"></i> 
-            โทร. : <span class="tel">0 2561 4292 - 3 ต่อ 5474</span>
+            <span class="tel">0 2561 4292 - 3 ต่อ 5479 หรือ 5432</span>
         </p>
-        <p>
-            <i class="fas fa-phone-alt"></i> 
-            โทร. : <span class="tel">0 2561 4292 - 3 ต่อ 5432</span>
-        </p>
+
     </div>
 
 </main>
