--- a/Planrfdo.html
+++ b/Planrfdo.html
@@ -290,6 +290,14 @@
                 <li><a href="https://www.forest.go.th/product/th/zoom/" target="_blank">ระบบจองห้องประชุมออนไลน์</a></li>
             </ul>
         </li>
+                    <li class="dropdown"><a href="#" class="active-link">จัดซื้อจัดจ้าง ▾</a>
+                <ul class="dropdown-menu">
+                    <li><a href="procurement_plan.html">แผนการจัดซื้อจัดจ้าง</a></li>
+                    <li><a href="procurement_draft.html">ประกาศร่างขอบเขตของงานและราคากลาง</a></li>
+                    <li><a href="procurement_announce.html">ประกาศจัดซื้อจัดจ้าง</a></li>
+                    <li><a href="procurement_winner.html">ประกาศผู้ชนะการเสนอราคา</a></li>
+                </ul>
+            </li>
         <li><a href="edocs.html">ระบบหนังสือเวียนกรมป่าไม้</a></li>
         <li><a href="https://www.forest.go.th/research/" target="_blank">สำนักวิจัยและพัฒนาการป่าไม้</a></li>
         <li><a href="https://www.forest.go.th/home/" target="_blank">กรมป่าไม้</a></li>
@@ -320,7 +328,7 @@
         
         <div class="person-card head-card">
             <div class="person-image">
-                <img src="images/none.jpg" alt="รูปนางสาวเกศสุดา" style="width: 100%; height: 100%; object-fit: cover;">
+                <img src="images/kedsuda.jpg" alt="รูปนางสาวเกศสุดา" style="width: 100%; height: 100%; object-fit: cover;">
             </div>
             <div class="person-name">นางสาวเกศสุดา เอกนิคม</div>
             <div class="person-position">นักวิชาการป่าไม้ปฏิบัติการ <br> ทำหน้าที่หัวหน้าฝ่ายแผนและติดตามประเมินผล </div>
