--- a/Adminrfdo.html
+++ b/Adminrfdo.html
@@ -339,7 +339,7 @@
         
         <div class="person-card head-card">
             <div class="person-image">
-                <img src="images/chatchrapee.jpg" alt="รูปนางสาวชัชระพี" style="width: 100%; height: 100%; object-fit: cover;"> 
+                <img src="images/none.jpg" alt="รูปนางสาวชัชระพี" style="width: 100%; height: 100%; object-fit: cover;"> 
                 <span style="display: none;">นางสาวชัชระพี</span>
             </div>
             <div class="person-name">นางสาวชัชระพี สอนไวย์</div>
@@ -424,4 +424,5 @@
 <footer>© 2025 ส่วนอำนวยการ สำนักวิจัยและพัฒนาการป่าไม้</footer>
 
 </body>
+
 </html>
