--- a/FArfdo.html
+++ b/FArfdo.html
@@ -349,7 +349,7 @@
         
         <div class="person-card head-card">
             <div class="person-image">
-                <img src="images/atchara.png" alt="รูปนางสาวอัจฉรา" style="width: 100%; height: 100%; object-fit: cover;"> 
+                <img src="images/atchara.jpg" alt="รูปนางสาวอัจฉรา" style="width: 100%; height: 100%; object-fit: cover;"> 
             </div>
             <div class="person-name">นางสาวอัจฉรา หล่ายแปด</div>
             <div class="person-position">นักจัดการงานทั่วไปปฏิบัติการ <br> ทำหน้าที่หัวหน้าฝ่ายการเงิน และบัญชี </div>
@@ -417,4 +417,5 @@
 <footer>© 2025 ส่วนอำนวยการ สำนักวิจัยและพัฒนาการป่าไม้</footer>
 
 </body>
+
 </html>
