--- a/Adminrfdo.html
+++ b/Adminrfdo.html
@@ -10,6 +10,22 @@
     <link rel="icon" type="image/png" href="images/logorfdo.png">
 
     <style>
+        /* === โค้ดสำหรับป้องกันการเซฟรูปภาพ (CSS) === */
+        img {
+            user-select: none; /* ป้องกันการเลือกข้อความ/รูปภาพ */
+            -webkit-user-select: none; 
+            -moz-user-select: none; 
+            pointer-events: none; /* ปิดการตอบสนองของเมาส์ต่อรูปภาพโดยตรง */
+            -webkit-user-drag: none; /* ป้องกันการลากรูปภาพ */
+        }
+        /* อนุญาตให้องค์ประกอบที่เป็นลิงก์/ปุ่มคลิกได้ตามปกติ */
+        a, button, .dropdown:hover > a, .quick-links li a { 
+            pointer-events: auto !important; 
+            cursor: pointer; /* ให้เคอร์เซอร์ยังเป็นรูปมือ */
+        }
+        /* ================================== */
+
+
         /* CSS ทั่วไป (Head, Nav, Footer เหมือนเดิม) */
         body {
             margin: 0;
@@ -274,6 +290,7 @@
         <li class="dropdown">
             <a href="#">เกี่ยวกับเรา ▾</a>
             <ul class="dropdown-menu">
+                <li><a href="Structure.html">โครงสร้างส่วนอำนวยการ</a></li> 
                 <li><a href="Adminrfdo.html">ฝ่ายธุรการ</a></li> 
                 <li><a href="HRrfdo.html">ฝ่ายการเจ้าหน้าที่</a></li>
                 <li><a href="FArfdo.html">ฝ่ายการเงิน และบัญชี</a></li>
@@ -290,6 +307,15 @@
                 <li><a href="https://www.forest.go.th/product/th/zoom/" target="_blank">ระบบจองห้องประชุมออนไลน์</a></li>
             </ul>
         </li>
+                        <li class="dropdown"><a href="#" class="active-link">จัดซื้อจัดจ้าง ▾</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="procurement_plan.html">แผนการจัดซื้อจัดจ้าง</a></li>
+                        <li><a href="procurement_draft.html">ประกาศร่างขอบเขตของงานและราคากลาง</a></li>
+                        <li><a href="procurement_announce.html">ประกาศจัดซื้อจัดจ้าง</a></li>
+                        <li><a href="procurement_winner.html">ประกาศผู้ชนะการเสนอราคา</a></li>
+                    </ul>
+                </li>
+        <li><a href="procurement_regulations.html">ระเบียบเกี่ยวกับการพัสดุ</a></li>
         <li><a href="edocs.html">ระบบหนังสือเวียนกรมป่าไม้</a></li>
         <li><a href="https://www.forest.go.th/research/" target="_blank">สำนักวิจัยและพัฒนาการป่าไม้</a></li>
         <li><a href="https://www.forest.go.th/home/" target="_blank">กรมป่าไม้</a></li>
@@ -423,6 +449,14 @@
 
 <footer>© 2025 ส่วนอำนวยการ สำนักวิจัยและพัฒนาการป่าไม้</footer>
 
-</body>
+<script>
+// === โค้ด JavaScript สำหรับป้องกันการคลิกขวา (Context Menu) ===
+document.addEventListener('contextmenu', function(e) {
+    // ป้องกันการแสดงเมนูคลิกขวาบนทั้งหน้า
+    e.preventDefault();
+});
+// ===========================================
+</script>
 
+</body>
 </html>
