--- a/contact.html
+++ b/contact.html
@@ -177,6 +177,7 @@
         <li class="dropdown">
             <a href="#">เกี่ยวกับเรา ▾</a>
             <ul class="dropdown-menu">
+                <li><a href="Structure.html">โครงสร้างส่วนอำนวยการ</a></li> 
                 <li><a href="Adminrfdo.html">ฝ่ายธุรการ</a></li> 
                 <li><a href="HRrfdo.html">ฝ่ายการเจ้าหน้าที่</a></li>
                 <li><a href="FArfdo.html">ฝ่ายการเงิน และบัญชี</a></li>
@@ -193,6 +194,15 @@
                 <li><a href="https://www.forest.go.th/product/th/zoom/" target="_blank">ระบบจองห้องประชุมออนไลน์</a></li>
             </ul>
         </li>
+                    <li class="dropdown"><a href="#" class="active-link">จัดซื้อจัดจ้าง ▾</a>
+                <ul class="dropdown-menu">
+                    <li><a href="procurement_plan.html">แผนการจัดซื้อจัดจ้าง</a></li>
+                    <li><a href="procurement_draft.html">ประกาศร่างขอบเขตของงานและราคากลาง</a></li>
+                    <li><a href="procurement_announce.html">ประกาศจัดซื้อจัดจ้าง</a></li>
+                    <li><a href="procurement_winner.html">ประกาศผู้ชนะการเสนอราคา</a></li>
+                </ul>
+            </li>
+        <li><a href="procurement_regulations.html">ระเบียบเกี่ยวกับการพัสดุ</a></li>
         <li><a href="edocs.html">ระบบหนังสือเวียนกรมป่าไม้</a></li>
         <li><a href="https://www.forest.go.th/research/" target="_blank">สำนักวิจัยและพัฒนาการป่าไม้</a></li>
         <li><a href="https://www.forest.go.th/home/" target="_blank">กรมป่าไม้</a></li>
@@ -287,4 +297,3 @@
 
 </body>
 </html>
-
