--- a/procurement_announce.html
+++ b/procurement_announce.html
@@ -76,7 +76,7 @@
                     <li><a href="https://www.forest.go.th/product/th/zoom/" target="_blank">ระบบจองห้องประชุมออนไลน์</a></li>
                 </ul>
             </li>
-            <li class="dropdown"><a href="#">ข่าวจัดซื้อจัดจ้าง ▾</a>
+            <li class="dropdown"><a href="#">จัดซื้อจัดจ้าง ▾</a>
                 <ul class="dropdown-menu">
                     <li><a href="procurement_plan.html">แผนการจัดซื้อจัดจ้าง</a></li>
                     <li><a href="procurement_draft.html">ประกาศร่างขอบเขตของงานและราคากลาง</a></li>
