--- a/Adminrfdo.html
+++ b/Adminrfdo.html
@@ -400,7 +400,7 @@
         
         <div class="person-card head-card">
             <div class="person-image">
-                <img src="images/none.jpg" alt="รูปนางสาวชัชระพี" style="width: 100%; height: 100%; object-fit: cover;"> 
+                <img src="images/chatchrapee.jpg" alt="รูปนางสาวชัชระพี" style="width: 100%; height: 100%; object-fit: cover;"> 
                 <span style="display: none;">นางสาวชัชระพี</span>
             </div>
             <div class="person-name">นางสาวชัชระพี สอนไวย์</div>
