--- a/Structure.html
+++ b/Structure.html
@@ -488,7 +488,7 @@
         <div class="staff-grid">
             
             <div class="staff-card">
-                <img class="staff-img" src="images/none.jpg" alt="นางสาวชัชระพี สอนไวย์">
+                <img class="staff-img" src="images/chatchrapee.jpg" alt="นางสาวชัชระพี สอนไวย์">
                 <div class="staff-name">นางสาวชัชระพี สอนไวย์</div>
                 <div class="staff-position">นักจัดการงานทั่วไปปฏิบัติการ<br>หัวหน้าฝ่ายธุรการ</div>
                 <a href="Adminrfdo.html" class="staff-link"><i class="fas fa-clipboard-list"></i> ดูข้อมูลฝ่าย</a>
