--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
     <ul>
         <li><a href="#" class="home-icon"><svg width="24" height="24" viewBox="0 0 24 24"><path d="M3 10.5L12 3l9 7.5V21a1 1 0 0 1-1 1h-5v-6h-6v6H4a1 1 0 0 1-1-1V10.5z"/></svg></a></li>
         
-        <li class="dropdown">
+       <li class="dropdown">
             <a href="#">เกี่ยวกับเรา ▾</a>
             <ul class="dropdown-menu">
                 <li><a href="Structure.html">โครงสร้างส่วนอำนวยการ</a></li> 
@@ -497,7 +497,6 @@
                         <li><a href="procurement_draft.html">ประกาศร่างขอบเขตของงานฯ</a></li>
                         <li><a href="procurement_announce.html">ประกาศจัดซื้อจัดจ้าง</a></li>
                         <li><a href="procurement_winner.html">ประกาศผู้ชนะการเสนอราคา</a></li>
-                        <li><a href="procurement_regulations.html">ระเบียบเกี่ยวกับการพัสดุ</a></li>
                     </ul>
                 </li>
 
@@ -512,7 +511,16 @@
             </ul>
         </li>
 
+        <li class="dropdown">
+            <a href="#">ระเบียบ ▾</a>
+            <ul class="dropdown-menu">
+                <li><a href="procurement_regulations.html">ระเบียบเกี่ยวกับการพัสดุ</a></li>
+                <li><a href="official_co.html">ระเบียบการจัดทำหนังสือราชการ</a></li>
+            </ul>
+        </li>
+
         <li><a href="https://forprod.forest.go.th/forprod/forprod2017/form/default.html" target="_blank">แบบฟอร์ม</a></li>
+
         <li><a href="contact.html">ติดต่อ</a></li>
     </ul>
 </nav>
