--- a/Adminrfdo.html
+++ b/Adminrfdo.html
@@ -492,7 +492,7 @@
     </div>
     
     <div class="contact-section">
-        <h3 class="section-header" style="margin-top: 0;"><i class="fas fa-envelope-open-text"></i> ติดต่อฝ่ายธุรการ</h3>
+        <h3 class="section-header" style="margin-top: 0;"></i> ติดต่อฝ่ายธุรการ</h3>
         <p>
             <i class="fas fa-phone-alt"></i> 
             <span class="tel">0 2561 4292 - 3 ต่อ 5474</span>
@@ -515,4 +515,5 @@ document.addEventListener('contextmenu', function(e) {
 </script>
 
 </body>
+
 </html>
