--- a/PDrfdo.html
+++ b/PDrfdo.html
@@ -606,6 +606,10 @@
             <i class="fas fa-phone-alt"></i> 
             <span class="tel">0 2561 4292 - 3 ต่อ 5086</span>
         </p>
+        <p>
+            <i class="fas fa-envelope"></i> 
+            loveforest2555@gmail.com
+        </p>
     </div>
 
 </main>
