--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
             <a href="https://edoc.forest.go.th/SARABAN/login.html" target="_blank" class="menu-item">
                 <img src="images/menu3.png" alt="ระบบสารบรรณอิเล็กทรอนิกส์">
             </a>
-            <a href="#" target="_blank" class="menu-item">
+            <a href="edocs.html" target="_blank" class="menu-item">
                 <img src="images/menu4.png" alt="ระบบหนังสือเวียนอิเล็กทรอนิกส์">
             </a>
         </div>
@@ -586,7 +586,7 @@
         <div class="sidebar-card">
             <h3 class="news-header">
                 <svg width="20" height="20" viewBox="0 0 24 24"><path d="M20 2H4c-1.1 0-2 .9-2 2v18l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm0 14H6l-2 2V4h16v12z"/></svg>
-                ข่าวประชาสัมพันธ์
+                ประชาสัมพันธ์
             </h3>
             <ul class="news-list" id="newsList">
                 <li style="text-align:center; color:#999;">กำลังโหลด...</li>
@@ -758,7 +758,7 @@ window.onclick = (event) => {
         }
 
         if (!data || data.length === 0) {
-            newsList.innerHTML = `<li style="text-align:center;">ไม่พบข่าวสาร</li>`;
+            newsList.innerHTML = `<li style="text-align:center;">ไม่พบการประชาสัมพันธ์</li>`;
             return;
         }
 
