--- a/procurement_regulations.html
+++ b/procurement_regulations.html
@@ -315,13 +315,12 @@
             <ul class="dropdown-menu">
                 
                 <li class="nested-dropdown">
-                    <a href="#">จัดซื้อจัดจ้าง ▸</a>
+                    <a href="procurement.html">จัดซื้อจัดจ้าง ▸</a>
                     <ul class="submenu">
                         <li><a href="procurement_plan.html">แผนการจัดซื้อจัดจ้าง</a></li>
                         <li><a href="procurement_draft.html">ประกาศร่างขอบเขตของงานฯ</a></li>
                         <li><a href="procurement_announce.html">ประกาศจัดซื้อจัดจ้าง</a></li>
                         <li><a href="procurement_winner.html">ประกาศผู้ชนะการเสนอราคา</a></li>
-                        <li><a href="procurement_regulations.html">ระเบียบเกี่ยวกับการพัสดุ</a></li>
                     </ul>
                 </li>
 
