--- a/Adminrfdo.html
+++ b/Adminrfdo.html
@@ -348,7 +348,7 @@
             <ul class="dropdown-menu">
                 
                 <li class="nested-dropdown">
-                    <a href="#">จัดซื้อจัดจ้าง ▸</a>
+                    <a href="procurement.html">จัดซื้อจัดจ้าง ▸</a>
                     <ul class="submenu">
                         <li><a href="procurement_plan.html">แผนการจัดซื้อจัดจ้าง</a></li>
                         <li><a href="procurement_draft.html">ประกาศร่างขอบเขตของงานฯ</a></li>
@@ -515,5 +515,4 @@ document.addEventListener('contextmenu', function(e) {
 </script>
 
 </body>
-
 </html>
