--- a/procurement_draft.html
+++ b/procurement_draft.html
@@ -276,7 +276,7 @@
                 <a href="#">ข่าวสาร ▾</a>
                 <ul class="dropdown-menu">
                     <li class="nested-dropdown">
-                        <a href="#">จัดซื้อจัดจ้าง ▸</a>
+                        <a href="procurement.html">จัดซื้อจัดจ้าง ▸</a>
                         <ul class="submenu">
                             <li><a href="procurement_plan.html">แผนการจัดซื้อจัดจ้าง</a></li>
                             <li><a href="procurement_draft.html">ประกาศร่างขอบเขตของงานฯ</a></li>
